--- a/AMEnvelope.lpi
+++ b/AMEnvelope.lpi
@@ -98,6 +98,7 @@
         <Filename Value="formprintpreview.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="PrintPreviewForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormPrintPreview"/>
       </Unit2>
