Create the SettingsForm

--- a/AMEnvelope.lpi
+++ b/AMEnvelope.lpi
@@ -81,7 +81,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="3">
+    <Units Count="4">
       <Unit0>
         <Filename Value="AMEnvelope.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -102,6 +102,14 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormPrintPreview"/>
       </Unit2>
+      <Unit3>
+        <Filename Value="formsettings.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="SettingsForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="FormSettings"/>
+      </Unit3>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
