Add image width setting

--- a/AMEnvelope.lpi
+++ b/AMEnvelope.lpi
@@ -146,6 +146,7 @@
         <Filename Value="formabout.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="AboutForm"/>
+        <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormAbout"/>
       </Unit4>
