--- a/AMEnvelope.lpi
+++ b/AMEnvelope.lpi
@@ -113,7 +113,7 @@
         <PackageName Value="LCL"/>
       </Item2>
     </RequiredPackages>
-    <Units Count="4">
+    <Units Count="5">
       <Unit0>
         <Filename Value="AMEnvelope.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -142,6 +142,14 @@
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FormAbout"/>
       </Unit3>
+      <Unit4>
+        <Filename Value="formimagemanager.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="ImageManagerForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+        <UnitName Value="FormImageManager"/>
+      </Unit4>
     </Units>
   </ProjectOptions>
   <CompilerOptions>
